--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "fantasy-streamer-hq",
   "version": "0.1.0",
   "private": true,
@@ -10,9 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "dotenv": "^17.2.3",
     "next": "16.0.0",
+    "node-fetch": "^3.3.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "swr": "^2.3.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
