--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "type": "module",
   "name": "fantasy-streamer-hq",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "cron": "tsx server/cron/auto-crons.ts",
+    "cron:streamers": "tsx server/cron/auto-streamers.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.76.1",
+    "@supabase/supabase-js": "^2.46.0",
     "dotenv": "^17.2.3",
-    "next": "16.0.0",
+    "next": "^16.0.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "swr": "^2.3.6",
-    "zod": "^4.1.12"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sonner": "^2.0.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^22.0.0",
+    "@types/node-cron": "^3.0.10",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
+    "tsx": "^4.16.0",
+    "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
   }
 }
