--- a/package.json
+++ b/package.json
@@ -9,34 +9,33 @@
     "start": "next start",
     "lint": "next lint",
     "cron": "tsx server/cron/auto-crons.ts",
-    "cron:streamers": "tsx server/cron/auto-streamers.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.46.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.45.3",
+    "@tanstack/react-query": "^5.51.23",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "next": "^16.0.0",
-    "node-cron": "^3.0.3",
+    "next": "^14.2.33",
     "node-fetch": "^3.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sonner": "^2.0.7",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
-    "@types/node": "^22.0.0",
-    "@types/node-cron": "^3.0.10",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.1",
+    "@tauri-apps/cli": "^2.0.0",
+    "@types/react": "19.2.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "tsx": "^4.16.0",
-    "typescript": "^5.4.5"
-  },
-  "engines": {
-    "node": ">=22.0.0",
-    "npm": ">=10.0.0"
+    "tailwindcss": "^3.4.14",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
   }
 }
