--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.45.3",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "next": "^14.2.33",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
@@ -33,8 +35,8 @@
     "@tauri-apps/cli": "^2.0.0",
     "@types/react": "19.2.2",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   }
