--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.45.3",
     "@tailwindcss/postcss": "^4.1.16",
@@ -22,6 +23,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.552.0",
     "next": "^14.2.33",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
